Some fonts are ignored

Change the default font so you can clearly see the differences.

"Arial Black" and "Arial Unicode MS" aren't working (it ignore them and use default font).

"Aramis Italic" works fine.

Test file:

Normal FONT -<font face="arial black">- FONT arial black</font>
Normal FONT -<font face="Arial Unicode MS">- FONT Arial Unicode MS</font>
Normal FONT -<font face="Aramis Italic">- FONT Aramis Italic</font>

Fonts are attached.