Freetype: account for more complex font names on Windows

We have to count for "Bold", "Normal" and "Italic" ending in registry

Close #4949